--- a/css/site.css
+++ b/css/site.css
@@ -264,7 +264,7 @@ td.BadgeGroup i {
     cursor: pointer;
 }
 
-@@media only screen and (max-width:480px) {
+@media only screen and (max-width:480px) {
 
     .backgroundImage {
         background-size: 190% 115%;
@@ -587,7 +587,6 @@ ul {
 
 .container2 {
     width: 98%;
-    user-select: none;
     overflow: hidden;
     max-width: 900px;
     border-radius: 5px;
@@ -797,7 +796,7 @@ ul {
     width: 100%;
 }
 
-@@media screen and (max-width: 2160px) {
+@media screen and (max-width: 2160px) {
     .setMinHeight {
         min-height: 620px;
     }
@@ -807,7 +806,7 @@ ul {
     }
 }
 
-@@media screen and (max-width: 1080px) {
+@media screen and (max-width: 1080px) {
     .setMinHeight {
         min-height: 620px;
     }
@@ -817,7 +816,7 @@ ul {
     }
 }
 
-@@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .setMinHeight {
         min-height: 500px;
     }
@@ -827,7 +826,7 @@ ul {
     }
 }
 
-@@media screen and (max-width: 540px) {
+@media screen and (max-width: 540px) {
     #videoInfoMain {
         padding: 10% 5% 5% 5%;
     }
@@ -1439,7 +1438,7 @@ body.vjs-full-window {
     backdrop-filter: blur(20px) saturate(1.5) brightness(1.2);
 }
 
-@@media screen and (max-width: 740px) {
+@media screen and (max-width: 740px) {
     .video-js .vjs-control-bar {
         width: calc( 100% - 40px );
         bottom: 20px;
@@ -1476,7 +1475,7 @@ body.vjs-full-window {
     visibility: visible;
 }
 
-@@media screen {
+@media screen {
     .vjs-user-inactive.vjs-playing .vjs-control-bar:before {
         content: "";
     }
