--- a/css/site.css
+++ b/css/site.css
@@ -9,6 +9,25 @@ body {
 }
 
 
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #C6700C;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+
+    #myBtn:hover {
+        background-color: #555;
+    }
 
 a {
     color: #B3B3B3;
@@ -557,7 +576,7 @@ ul {
 }
 
     .banner::before {
-        /* content: "";
+        content: "";
         position: absolute;
         /* width: 95%;
         height: 80%; */
